[gd_scene load_steps=7 format=2]

[ext_resource path="res://game.gd" type="Script" id=1]
[ext_resource path="res://theme.tres" type="Theme" id=2]
[ext_resource path="res://report.png" type="Texture" id=3]
[ext_resource path="res://emrg.png" type="Texture" id=4]
[ext_resource path="res://font.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 80
outline_size = 5
extra_spacing_char = 5
font_data = ExtResource( 5 )

[node name="game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="timer" type="Timer" parent="."]
process_mode = 0
autostart = true

[node name="bg" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="selectAct" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="emerg" type="TextureButton" parent="selectAct"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -272.8
margin_top = -99.1591
margin_right = -80.8002
margin_bottom = 92.8409
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 4 )
texture_focused = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="time" type="Label" parent="selectAct/emerg"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "30"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="report" type="TextureButton" parent="selectAct"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 73.3088
margin_top = -95.6642
margin_right = 265.309
margin_bottom = 96.3358
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
texture_disabled = ExtResource( 3 )
texture_focused = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="end_game_crew" type="Button" parent="selectAct"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -162.0
margin_top = -84.0
margin_right = -1.0
margin_bottom = -34.0
text = "game.ewvo.crew"

[node name="end_game_impasta" type="Button" parent="selectAct"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 3.0
margin_top = -84.0
margin_right = 163.0
margin_bottom = -34.0
text = "game.ewvo.impostors"
clip_text = true

[node name="end_game_with_victory_of" type="Label" parent="selectAct"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -94.0
margin_top = -139.0
margin_right = 95.0
margin_bottom = -91.0
text = "game.ewvo"
align = 1
valign = 1
autowrap = true
clip_text = true
[connection signal="pressed" from="selectAct/emerg" to="." method="meeting"]
[connection signal="pressed" from="selectAct/report" to="." method="report"]
[connection signal="pressed" from="selectAct/end_game_crew" to="." method="win_crew"]
[connection signal="pressed" from="selectAct/end_game_impasta" to="." method="win_impasta"]
